# Gist

./: .gitignore  CMakeLists.txt
src/core/: CoreFrequencyDomainFeatures.h  CoreTimeDomainFeatures.h
src/fft/: WindowFunctions.h
src/onset-detection-functions/: OnsetDetectionFunction.h
